src/objects/Referral__c.object
<CustomObject>
    <description>Details of the Individual referred in the STADD Program</description>
    <fields>
        <fullName>Age_at_Referral__c</fullName>
        <formula>FLOOR(( DATEVALUE(CreatedDate) -  Individual_Date_of_Birth__c )/365.25+0.001)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Age at Referral</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Assessment_Form_Id__c</fullName>
        <label>Assessment Form Id</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Case__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>filled out by the system (blank until a case is created)</inlineHelpText>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Referrals</relationshipLabel>
        <relationshipName>Referrals</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Community__c</fullName>
        <description>Auto-populated</description>
        <encrypted>true</encrypted>
        <label>Community</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Conscent_Form_Id__c</fullName>
        <label>Conscent Form Id</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Current_Age__c</fullName>
        <formula>FLOOR((TODAY()-Individual_Date_of_Birth__c)/365.25+0.001)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Current Age</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Current_School__c</fullName>
        <label>Current School</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DAA_or_other_cultural_or_spiritual_repre__c</fullName>
        <encrypted>true</encrypted>
        <label>DAA or other cultural or spiritual repre</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>EIS_Location__c</fullName>
        <description>The EIS Office Locations will be the names of the 5 regional offices</description>
        <label>Location</label>
        <picklist>
            <controllingField>EIS_Region__c</controllingField>
            <picklistValues>
                <fullName>Abbotsford</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bulkley / Stikine</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Burnaby</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Campbell River</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cariboo</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chilliwack</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>City Centre</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Comox Valley</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Delta</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Downtown Eastside</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>East Kootenay</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fraser / Cascades</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Gold Trail</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Haida Gwaii / Prince Rupert</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Kamloops</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Langley</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mission</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Nanaimo</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Nechako Lakes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>New Westminster</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Parksville / Qualicum</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Peace North</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Prince George</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Quesnel</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ridge Meadows</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>South Okanagan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Surrey East</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Surrey North</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Surrey South</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tri-Cities</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>EIS_Region__c</fullName>
        <label>Region</label>
        <picklist>
            <picklistValues>
                <fullName>Northern Region</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fraser Region</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Interior Region</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Vancouver Island Region</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Vancouver Coastal Region</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Eligibility_Type__c</fullName>
        <label>Eligibility Type</label>
        <picklist>
            <picklistValues>
                <fullName>DD</fullName>
                <color>#FFCC66</color>
            </picklistValues>
            <picklistValues>
                <fullName>PSI FASD</fullName>
                <color>#78C953</color>
            </picklistValues>
            <picklistValues>
                <fullName>PSI ASD/PDD</fullName>
                <color>#CC0000</color>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Existing_Protocols_Safeguards__c</fullName>
        <encrypted>true</encrypted>
        <label>Existing Protocols/Safeguards</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Foundry_BC_Referral__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Individual/youth was directly referred through a Foundry service hub location.</inlineHelpText>
        <label>Foundry BC Referral</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Has_legal_authority__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If the individual is the first person to contact regarding the case, this indicator is checked and the primary contact information below is not completed</description>
        <inlineHelpText>&quot;Representative, Guardian, or Committee&quot;</inlineHelpText>
        <label>Has legal authority</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Individual_Cell_Phone_Number__c</fullName>
        <encrypted>true</encrypted>
        <label>Individual Cell Phone Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Individual_Date_of_Birth__c</fullName>
        <description>The birth date of the individual being referred to the program</description>
        <inlineHelpText>Choose in order: day/month/year to complete; any other order will not be accepted by the system</inlineHelpText>
        <label>Individual Date of Birth</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Individual_Email_Address__c</fullName>
        <description>The email address of the individual being referred to the program</description>
        <encrypted>true</encrypted>
        <label>Individual Email Address</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Individual_First_Name__c</fullName>
        <description>The first name of the individual being referred to the STADD program</description>
        <encrypted>true</encrypted>
        <label>Individual First Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Individual_Gender__c</fullName>
        <label>Individual Gender</label>
        <picklist>
            <picklistValues>
                <fullName>Male</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Female</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Disclosed</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Individual_Home_Phone_Number__c</fullName>
        <description>The Referral should capture multiple phone numbers for the individual.  This type will capture the type of phone number</description>
        <encrypted>true</encrypted>
        <inlineHelpText>You need to enter at least one phone number</inlineHelpText>
        <label>Individual Home Phone Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Individual_Last_Name__c</fullName>
        <description>The last name of the individual being referred to the STADD program</description>
        <encrypted>true</encrypted>
        <label>Individual Last Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Individual_Middle_Name__c</fullName>
        <description>The middle name of the individual being referred to the STADD program</description>
        <encrypted>true</encrypted>
        <label>Individual Middle Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Individual_Name_formula__c</fullName>
        <formula>Individual_First_Name__c  &amp; &quot; &quot; &amp; Individual_Last_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Individual Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Individual_Preferred_Name__c</fullName>
        <description>Individual Preferred Name of the Referral</description>
        <encrypted>true</encrypted>
        <label>Individual Preferred Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Individual_Work_Phone_Number_Extension__c</fullName>
        <description>Work phone number extension (if required)</description>
        <encrypted>true</encrypted>
        <label>Individual Work Phone Number Extension</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Individual_Work_Phone_Number__c</fullName>
        <encrypted>true</encrypted>
        <label>Individual Work Phone Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Individual__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>filled out by the system (blank until a case is created)</inlineHelpText>
        <label>Individual Referred</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.IsPersonAccount</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Referrals</relationshipLabel>
        <relationshipName>Referrals</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Is_the_Individual_Attending_School_Indic__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>check the box to enter and save contact information for this organization</inlineHelpText>
        <label>Is the Individual Attending School ?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_the_Individual_eligible_for_CLBC_Serv__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Check the box to enter and save contact information for this organization</inlineHelpText>
        <label>Is the Individual eligible for CLBC Serv</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_the_individual_being_supported_by_CFD__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Check the box to enter and save contact information for this organization</inlineHelpText>
        <label>Is the individual supported by CFD CYSN</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Language_in_the_Home__c</fullName>
        <label>Language in the Home</label>
        <picklist>
            <picklistValues>
                <fullName>English</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>French</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mandarin</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cantonese</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Punjabi</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chinese, n.o.s.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>German</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tagalog</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Korean</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Spanish</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Persian (Farsi)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Mailing_Address_City__c</fullName>
        <encrypted>true</encrypted>
        <label>Mailing Address City</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mailing_Address_Line_1__c</fullName>
        <encrypted>true</encrypted>
        <label>Mailing Address Line 1</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mailing_Address_Line_2__c</fullName>
        <encrypted>true</encrypted>
        <label>Mailing Address Line 2</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mailing_Address_Postal_Code__c</fullName>
        <encrypted>true</encrypted>
        <label>Mailing Address Postal Code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mailing_Address_Province__c</fullName>
        <label>Mailing Address Province</label>
        <picklist>
            <picklistValues>
                <fullName>BC</fullName>
                <default>true</default>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Mailing_Address_same_as_Physical_Address__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>if not checked, need to enter the mailing address</inlineHelpText>
        <label>Mailing Address same as Physical Address</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Other_Agencies_Involved__c</fullName>
        <encrypted>true</encrypted>
        <label>Other Agencies Involved</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Other_Language__c</fullName>
        <encrypted>true</encrypted>
        <label>Other Language</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Physical_Address_City__c</fullName>
        <encrypted>true</encrypted>
        <label>Physical Address City</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Physical_Address_Line_1__c</fullName>
        <description>The address of the physical location where the individual is living</description>
        <encrypted>true</encrypted>
        <label>Physical Address Line 1</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Physical_Address_Line_2__c</fullName>
        <encrypted>true</encrypted>
        <label>Physical Address Line 2</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Physical_Address_Postal_Code__c</fullName>
        <encrypted>true</encrypted>
        <label>Physical Address Postal Code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Physical_Address_Province__c</fullName>
        <label>Physical Address Province</label>
        <picklist>
            <picklistValues>
                <fullName>BC</fullName>
                <default>true</default>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Primary_Contact_Is_Individual_Indicator__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Cannot be used if the Rep/ Guardian/Committee indicator  is used</description>
        <inlineHelpText>Cannot be checked if Individual has a legal authority</inlineHelpText>
        <label>Individual is Primary Contact</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Primary_Contact_Is_Individual__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Primary Contact Is Individual</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Receiving_Services_on_Reserve__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Receiving CLBC Services on Reserve</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Referral_Notes__c</fullName>
        <encrypted>true</encrypted>
        <label>Referral Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Referral_Origin__c</fullName>
        <description>Inserts &quot;Self&quot; if a Self / Direct referral or the organization name if an organization referral</description>
        <formula>CASE ( Type_of_Referral__c , 
 &quot;Self / Direct Referral&quot;,&quot;Self&quot;,
 &quot;Organizational Referral&quot;, TEXT(Referring_Organization__c),
 &quot;Supported Referral&quot;,&quot;Supported&quot;,
  null)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Referral Origin</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Referring_Organization__c</fullName>
        <label>Referring Organization</label>
        <picklist>
            <picklistValues>
                <fullName>CFD (Children and Family Development)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CLBC (Community Living BC)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DAA (Delegated Aboriginal Agency)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Health Authority</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>School</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Special_limitations_hearing_sight_mob__c</fullName>
        <description>Special limitations (hearing, sight, mobility, behavioral)</description>
        <encrypted>true</encrypted>
        <label>Special considerations</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Pending</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Case Created</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rejected</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Sub_Status__c</fullName>
        <label>Status Stage</label>
        <picklist>
            <controllingField>Status__c</controllingField>
            <picklistValues>
                <fullName>Acceptance in Progress</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Converted to Case</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Duplicate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Incomplete Documents</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Individual Doesn&apos;t Qualify - Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Individual Doesn&apos;t Qualify - Outside of Service Area (Location)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Individual Doesn’t Qualify - Eligibility Type</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Individual Doesn’t Qualify - Outside of Program Age Parameters</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Opt-Out</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Waiting for Assignment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Waiting for Information</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Deceased</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Type_of_Referral__c</fullName>
        <label>Type of Referral</label>
        <picklist>
            <picklistValues>
                <fullName>Organizational Referral</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Self / Direct Referral</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Supported Referral</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>What_services_they_are_waiting_for__c</fullName>
        <description>What services they are waiting for</description>
        <encrypted>true</encrypted>
        <label>What services they are waiting for</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>case_ID__c</fullName>
        <formula>Case__r.CaseNumber</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>case ID</label>
        <type>Text</type>
    </fields>
    <label>Referral</label>
    <listViews>
        <fullName>All_Referrals</fullName>
        <columns>NAME</columns>
        <columns>Community__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>Individual_First_Name__c</columns>
        <columns>Individual_Last_Name__c</columns>
        <columns>Primary_Contact_Is_Individual_Indicator__c</columns>
        <columns>Status__c</columns>
        <columns>Sub_Status__c</columns>
        <columns>OWNER.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <label>All Referrals</label>
    </listViews>
    <listViews>
        <fullName>Coastal_Region</fullName>
        <columns>NAME</columns>
        <columns>Individual_First_Name__c</columns>
        <columns>Individual_Last_Name__c</columns>
        <columns>Primary_Contact_Is_Individual_Indicator__c</columns>
        <columns>Status__c</columns>
        <columns>Sub_Status__c</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Queue</filterScope>
        <label>New Coastal Region</label>
        <queue>Coastal_Region</queue>
        <sharedTo>
            <group>All_Coordinators</group>
            <role>Director_Coastal_Region</role>
            <role>Executive</role>
            <role>Project_Administrator</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Fraser_Region</fullName>
        <columns>NAME</columns>
        <columns>Individual_First_Name__c</columns>
        <columns>Individual_Last_Name__c</columns>
        <columns>Primary_Contact_Is_Individual_Indicator__c</columns>
        <columns>Status__c</columns>
        <columns>Sub_Status__c</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Queue</filterScope>
        <label>New Fraser Region</label>
        <queue>Fraser_Region</queue>
        <sharedTo>
            <group>All_Coordinators</group>
            <role>Director_Fraser_Region</role>
            <role>Executive</role>
            <role>Project_Administrator</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Interior_Region</fullName>
        <columns>NAME</columns>
        <columns>Individual_First_Name__c</columns>
        <columns>Individual_Last_Name__c</columns>
        <columns>Primary_Contact_Is_Individual_Indicator__c</columns>
        <columns>Status__c</columns>
        <columns>Sub_Status__c</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Queue</filterScope>
        <label>New Interior Region</label>
        <queue>Interior_Region</queue>
        <sharedTo>
            <group>All_Coordinators</group>
            <role>Director_Interior_Region</role>
            <role>Executive</role>
            <role>Project_Administrator</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>My_Referrals</fullName>
        <columns>NAME</columns>
        <columns>Individual_First_Name__c</columns>
        <columns>Individual_Last_Name__c</columns>
        <columns>Primary_Contact_Is_Individual_Indicator__c</columns>
        <columns>Status__c</columns>
        <columns>Sub_Status__c</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Mine</filterScope>
        <label>My Referrals</label>
        <sharedTo>
            <group>All_Navigators</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>New_Vancouver_Coastal_Region</fullName>
        <columns>NAME</columns>
        <columns>Individual_First_Name__c</columns>
        <columns>Individual_Last_Name__c</columns>
        <columns>Primary_Contact_Is_Individual_Indicator__c</columns>
        <columns>Status__c</columns>
        <columns>Sub_Status__c</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Queue</filterScope>
        <label>New Vancouver Coastal Region</label>
        <queue>Vancouver_Coastal_Region</queue>
        <sharedTo>
            <group>All_Coordinators</group>
            <role>Director_Fraser_Region</role>
            <role>Executive</role>
            <role>Project_Administrator</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Northern_Region</fullName>
        <columns>NAME</columns>
        <columns>Individual_First_Name__c</columns>
        <columns>Individual_Last_Name__c</columns>
        <columns>Primary_Contact_Is_Individual_Indicator__c</columns>
        <columns>Status__c</columns>
        <columns>Sub_Status__c</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Queue</filterScope>
        <label>New Northern Region</label>
        <queue>Northern_Region</queue>
        <sharedTo>
            <group>All_Coordinators</group>
            <role>Director_Northern_Region</role>
            <role>Executive</role>
            <role>Project_Administrator</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Pending_Coastal_Region</fullName>
        <columns>NAME</columns>
        <columns>Individual_First_Name__c</columns>
        <columns>Individual_Last_Name__c</columns>
        <columns>Primary_Contact_Is_Individual_Indicator__c</columns>
        <columns>Status__c</columns>
        <columns>Sub_Status__c</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>EIS_Region__c</field>
            <operation>equals</operation>
            <value>Coastal Region</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Pending</value>
        </filters>
        <label>Pending Coastal Region</label>
        <sharedTo>
            <group>All_Coordinators</group>
            <role>Director_Coastal_Region</role>
            <role>Navigator_Coastal_Region</role>
            <role>Project_Administrator</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Pending_Fraser_Region</fullName>
        <columns>NAME</columns>
        <columns>Individual_Last_Name__c</columns>
        <columns>Individual_First_Name__c</columns>
        <columns>Primary_Contact_Is_Individual_Indicator__c</columns>
        <columns>Status__c</columns>
        <columns>Sub_Status__c</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>EIS_Region__c</field>
            <operation>equals</operation>
            <value>Fraser Region</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Pending</value>
        </filters>
        <label>Pending Fraser Region</label>
        <sharedTo>
            <group>All_Coordinators</group>
            <role>Director_Fraser_Region</role>
            <role>Navigator_Fraser_Region</role>
            <role>Project_Administrator</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Pending_Interior_Region</fullName>
        <columns>NAME</columns>
        <columns>Individual_Last_Name__c</columns>
        <columns>Individual_First_Name__c</columns>
        <columns>Primary_Contact_Is_Individual_Indicator__c</columns>
        <columns>Status__c</columns>
        <columns>Sub_Status__c</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>EIS_Region__c</field>
            <operation>equals</operation>
            <value>Interior Region</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Pending</value>
        </filters>
        <label>Pending Interior Region</label>
        <sharedTo>
            <group>All_Coordinators</group>
            <role>Director_Interior_Region</role>
            <role>Navigator_Interior_Region</role>
            <role>Project_Administrator</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Pending_Northern_Region</fullName>
        <columns>NAME</columns>
        <columns>Individual_Last_Name__c</columns>
        <columns>Individual_First_Name__c</columns>
        <columns>Primary_Contact_Is_Individual_Indicator__c</columns>
        <columns>Status__c</columns>
        <columns>Sub_Status__c</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>EIS_Region__c</field>
            <operation>equals</operation>
            <value>Northern Region</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Pending</value>
        </filters>
        <label>Pending Northern Region</label>
        <sharedTo>
            <group>All_Coordinators</group>
            <role>Director_Northern_Region</role>
            <role>Navigator_Northern_Region</role>
            <role>Project_Administrator</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Pending_Vancouver_Coastal_Region</fullName>
        <columns>NAME</columns>
        <columns>Individual_First_Name__c</columns>
        <columns>Individual_Last_Name__c</columns>
        <columns>Primary_Contact_Is_Individual_Indicator__c</columns>
        <columns>Status__c</columns>
        <columns>Sub_Status__c</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>EIS_Region__c</field>
            <operation>equals</operation>
            <value>Vancouver Coastal Region</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Pending</value>
        </filters>
        <label>Pending Vancouver Coastal Region</label>
        <sharedTo>
            <group>All_Coordinators</group>
            <role>Director_Fraser_Region</role>
            <role>Navigator_Fraser_Region</role>
            <role>Project_Administrator</role>
        </sharedTo>
    </listViews>
</CustomObject>